@@ -20,7 +20,11 @@ Ver.7 (in development)
 - The method INTERMediatorOnPage.doAfterDeleteRecord can define. One parameter is going to pass the context name.
 - The 'ignoring-field' key can be defined in a context definition and it ignores any fields in the array value
   to check to include the field in the result.
-- [BUG FIX] The variable name '$follwingTimezones' in the params.php file was typo at all! Change it to $followingTimezones.
+- [BUG FIX] The variable name '$follwingTimezones' in the params.php file was typo at all!
+  Change it to $followingTimezones.
+- [BUG FIX] A calculation which refers to other context as like 'product@unitprice' detected wrong record.
+  Now any term in expressions having 'context@field' style refers to the 'relation' setting in the context definition.
+  If there is no associated record, It corrects any 'context' in the page.
 
 Ver.6 (November 21, 2020)
 - All communications went async.
